Issue #12: Tweak help message
Signed-off-by: Mike Detwiler <mike@detwiler.io>

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -70,7 +70,7 @@ bootstrap_option_hook()
 bootstrap_print_option_usage_hook()
 {
     cat <<EOF
- --install-buildreqs      install packages required to build
+ --install-buildreqs      install packages required to build this package
  --install-reqs           install packages required by this package
 EOF
 }
