--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
       matrix:
         include:
           - image: alpine:latest
-          - image: centos:latest
+          - image: quay.io/centos/centos:stream8
           - image: quay.io/centos/centos:stream9
           - image: fedora:latest
           - image: ubuntu:rolling
@@ -40,7 +40,9 @@ jobs:
 
       # see: https://github.com/actions/checkout/issues/290
       - name: Fetch Tags
-        run: git fetch --force --tags
+        run: |
+          git config --global --add safe.directory $(pwd)
+          git fetch --force --tags
 
       - name: Configure Gnulib Cache Key
         run: echo "GNULIB_CACHE_KEY=`git submodule status .gnulib | sed -re 's/^.([0-9,a-f]{1,}) .*$/\1/'`" >>$GITHUB_ENV
