Issue #17: Debian, RHEL support
Signed-off-by: Mike Detwiler <mike@detwiler.io>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,9 +13,12 @@ jobs:
           - image: alpine:latest
           - image: quay.io/centos/centos:stream8
           - image: quay.io/centos/centos:stream9
+          - image: debian:latest
           - image: fedora:latest
-          - image: ubuntu:rolling
+          - image: registry.access.redhat.com/ubi9/ubi
+          - image: ubuntu:20.04
           - image: ubuntu:latest
+          - image: ubuntu:rolling
 
     env:
       DEBIAN_FRONTEND: noninteractive
@@ -29,8 +32,8 @@ jobs:
           . /etc/os-release
           case $ID in
               alpine) apk update && apk upgrade && apk add git tar;;
-              centos|fedora) dnf -y upgrade && dnf -y install dnf-plugins-core git-core which;;
-              ubuntu) apt-get -y update && apt-get -y upgrade && apt-get -y install git;;
+              centos|fedora|rhel) dnf -y upgrade && dnf -y install dnf-plugins-core git-core which;;
+              debian|ubuntu) apt-get -y update && apt-get -y upgrade && apt-get -y install git;;
           esac
 
       - name: Checkout
